implemented uniswap2 query access
